--- a/app/usuario/usuario.css
+++ b/app/usuario/usuario.css
@@ -3,11 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 150vh;
     background-image: url("/fundo.png"); 
     background-size: cover;
     background-position: center;
-    width: 100%;
+    width: 100vw;
     max-width: 1500px;
     margin: 0 auto;
     padding: 20px;
@@ -16,8 +16,8 @@
 }
 
 .login {
-    max-height: 90vh;
-    max-width: 400px;
+    max-height: 150vh;
+    max-width: 500px;
     width: 90%;
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.5);
@@ -57,4 +57,25 @@
     padding: 40px 20px;
     box-sizing: border-box;
     overflow: hidden;
+}
+
+.competencias img {
+    width: 10vh;
+    height: 10vh;
+    margin: 0.5rem;
+    border-radius: 5px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.competencias {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    justify-items: center;
+    align-items: center;
+}
+
+.competencias img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
